<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#001A33"
	android:orientation="vertical">

	<ImageView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:adjustViewBounds="true"
		android:background="#002B54"
		android:src="@drawable/onboarding_3" />

	<TextView
		style="@style/TextAppearance.MaterialComponents.Headline4"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:text="@string/Onboarding_DefaultSettings_Title"
		android:textColor="@color/color_white" />

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				style="@style/TextAppearance.MaterialComponents.Body1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="32dp"
				android:layout_marginTop="16dp"
				android:text="@string/Onboarding_DefaultSettings_Header_1"
				android:textColor="@color/color_white"
				android:textStyle="bold" />

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="32dp"
				android:text="@string/Onboarding_DefaultSettings_Bullet_1"
				android:textColor="@color/color_white" />

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="32dp"
				android:text="@string/Onboarding_DefaultSettings_Bullet_2"
				android:textColor="@color/color_white" />

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="32dp"
				android:text="@string/Onboarding_DefaultSettings_Paragraph"
				android:textColor="@color/color_white" />

		</LinearLayout>
	</ScrollView>

	<Button
		android:id="@+id/master"
		android:layout_width="match_parent"
		android:layout_height="64dp"
		android:layout_marginHorizontal="64dp"
		android:text="@string/Onboarding_DefaultSettings_Button_Go"
		android:textColor="#002B54"
		app:backgroundTint="@color/color_white"
		app:cornerRadius="32dp" />

	<Button
		android:id="@+id/slave"
		style="@style/Widget.MaterialComponents.Button.TextButton"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/Onboarding_DefaultSettings_Button_Change"
		android:textColor="@color/color_white" />

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginBottom="16dp"
		android:src="@drawable/dots_3" />
</LinearLayout>